# PurrfectEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/PurrfectEngine/: PurrfectEngine.hpp  application.hpp  array.hpp  componentView.hpp  components.hpp  core.hpp  ecs.hpp  entity.hpp  entry.hpp  queue.hpp  renderer.hpp  result.hpp  scene.hpp  sparseSet.hpp  stringBuilder.hpp  stringView.hpp  window.hpp
engine/include/PurrfectEngine/events/: EventCallbacks.hpp  EventDispatcher.hpp  EventQueue.hpp  event.hpp
engine/include/PurrfectEngine/renderer/: bindable.hpp  buffer.hpp  enums.hpp  pipeline.hpp  renderTarget.hpp  texture.hpp
engine/include/PurrfectEngine/utils/: WindowRendererMap.hpp
engine/include/PurrfectEngine/utils/memory/: ObjectPool.hpp
engine/src/: application.cpp  array.cpp  componentView.cpp  ecs.cpp  entity.cpp  pipeline.cpp  queue.cpp  renderer.cpp  result.cpp  scene.cpp  sparseSet.cpp  stringBuilder.cpp  stringView.cpp  window.cpp
engine/src/events/: eventQueue.cpp
engine/src/renderer/: buffer.cpp  enums.cpp  pipeline.cpp  renderTarget.cpp
engine/src/utils/: WindowRendererMap.cpp
sandbox/: CMakeLists.txt  main.cpp
sandbox/assets/shaders/: fragment.frag  fragment.hlsl  vertex.hlsl  vertex.vert
sandbox/src/: main.cpp
